2007-01-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp: (GContentHandler::Show):

	Check for a potential veto. Fix #342951.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (safe_write_string), (ephy_node_write_to_xml):
	* src/bookmarks/ephy-bookmarks-export.c: (sanitise_string),
	(write_topics_list), (write_rdf):

	Make sure we don't write characters < 0x20 (except 0x9, 0xa, 0xd) to
	XML. Bug #392782.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/epiphany.defs:
	* src/epiphany.override:

	Fix the wrapping of the singleton Ephy[Embed]Shell as
	"epiphany.Shell()". Bug #351705.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/Makefile.am:

	Fix schemas install command.

2007-01-27  Priit Laes  <plaes@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Fixes the menu path of Gnome control center when displaying the service 
	unavailable error message. Bug #352923.

2007-01-24  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Changed the "redirected too many times" error page to be more
	friendly. Bug #395990.

2007-01-23  Christian Persch  <chpe@svn.gnome.org>

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:
	* embed/mozilla/GeckoPrintSession.cpp:

	Clear some print settings in the settings we hand to the print job, so
	they don't get applied twice. Bug #394818.

	Prepare for printing to PDF (#if 0'd until the gecko bug is fixed).

2007-01-23  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:
	
	Add another safe mime type.

2007-01-22  Christian Persch  <chpe@svn.gnome.org>

	* configure.ac:

	Post-release version bump.

2007-01-22  Christian Persch  <chpe@svn.gnome.org>

	=== Release 2.17.90 ===

	* configure.ac:

2007-01-18  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/ui/epiphany-bookmark-editor-ui.xml:
